1. 사진 및 동영상 촬영 후 이미지 뷰에 찍은 화면이 안뜨는 것 수정 2. 앨범에서 사진 및 동영상을 선택했을 때 이미지 뷰에 안뜨는 것 수정 ->  함수명을 잘못 만들었음.

--- a/CameraPhotoLibrary/Info.plist
+++ b/CameraPhotoLibrary/Info.plist
@@ -46,13 +46,13 @@
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>Privacy- Photo Library Usage Description</key>
-	<string></string>
+	<string>앨범사용</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string></string>
+	<string>마이크사용</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string></string>
+	<string>추가</string>
 	<key>NSCameraUsageDescription</key>
-	<string></string>
+	<string>카메라사용</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
